Add enrollments to allow one position to relate to different committtees.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,11 @@
     <th>Middle name</th>
     <th>Last name</th>
     <th>Email</th>
+    <th>Mobile phone</th>
+    <th>Work phone</th>
+    <th>Home phone</th>
+    <th>Work address</th>
+    <th>Date of birth</th>
     <th>Net</th>
     <th>Status</th>
   </tr>
@@ -16,6 +21,11 @@
     <td><%=h user.middle_name %></td>
     <td><%=h user.last_name %></td>
     <td><%=h user.email %></td>
+    <td><%=h user.mobile_phone %></td>
+    <td><%=h user.work_phone %></td>
+    <td><%=h user.home_phone %></td>
+    <td><%=h user.work_address %></td>
+    <td><%=h user.date_of_birth %></td>
     <td><%=h user.net_id %></td>
     <td><%=h user.status %></td>
     <td><%= link_to 'Show', user %></td>
