--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,31 @@
 </p>
 
 <p>
+  <b>Mobile phone:</b>
+  <%=h @user.mobile_phone %>
+</p>
+
+<p>
+  <b>Work phone:</b>
+  <%=h @user.work_phone %>
+</p>
+
+<p>
+  <b>Home phone:</b>
+  <%=h @user.home_phone %>
+</p>
+
+<p>
+  <b>Work address:</b>
+  <%=h @user.work_address %>
+</p>
+
+<p>
+  <b>Date of birth:</b>
+  <%=h @user.date_of_birth %>
+</p>
+
+<p>
   <b>Net:</b>
   <%=h @user.net_id %>
 </p>
