--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,6 +20,26 @@
     <%= f.text_field :email %>
   </p>
   <p>
+    <%= f.label :mobile_phone %><br />
+    <%= f.text_field :mobile_phone %>
+  </p>
+  <p>
+    <%= f.label :work_phone %><br />
+    <%= f.text_field :work_phone %>
+  </p>
+  <p>
+    <%= f.label :home_phone %><br />
+    <%= f.text_field :home_phone %>
+  </p>
+  <p>
+    <%= f.label :work_address %><br />
+    <%= f.text_field :work_address %>
+  </p>
+  <p>
+    <%= f.label :date_of_birth %><br />
+    <%= f.date_select :date_of_birth %>
+  </p>
+  <p>
     <%= f.label :net_id %><br />
     <%= f.text_field :net_id %>
   </p>
