--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -3,21 +3,14 @@
 <% form_for(@answer) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :question %><br />
-    <%= f.text_field :question %>
-  </p>
-  <p>
-    <%= f.label :request %><br />
-    <%= f.text_field :request %>
-  </p>
-  <p>
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
-  </p>
+  <%= render :partial => 'form', :object => f %>
+
   <p>
     <%= f.submit 'Create' %>
   </p>
 <% end %>
 
+<p>
 <%= link_to 'Back', answers_path %>
+</p>
+
