--- a/app/views/committees/edit.html.erb
+++ b/app/views/committees/edit.html.erb
@@ -3,14 +3,15 @@
 <% form_for(@committee) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
+  <%= render :partial => 'form', :object => f %>
+
   <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
 
+<p>
 <%= link_to 'Show', @committee %> |
 <%= link_to 'Back', committees_path %>
+</p>
+
