--- a/app/views/committees/new.html.erb
+++ b/app/views/committees/new.html.erb
@@ -3,13 +3,12 @@
 <% form_for(@committee) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
+  <%= render :partial => 'form', :object => f %>
+
   <p>
     <%= f.submit 'Create' %>
   </p>
 <% end %>
 
 <%= link_to 'Back', committees_path %>
+
