--- a/app/views/qualifications/edit.html.erb
+++ b/app/views/qualifications/edit.html.erb
@@ -3,18 +3,15 @@
 <% form_for(@qualification) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
+  <%= render :partial => 'form', :object => f %>
+
   <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
 
+<p>
 <%= link_to 'Show', @qualification %> |
 <%= link_to 'Back', qualifications_path %>
+</p>
+
