--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -3,22 +3,15 @@
 <% form_for(@question) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :content %><br />
-    <%= f.text_field :content %>
-  </p>
-  <p>
-    <%= f.label :global %><br />
-    <%= f.check_box :global %>
-  </p>
+  <%= render :partial => 'form', :object => f %>
+
   <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
 
+<p>
 <%= link_to 'Show', @question %> |
 <%= link_to 'Back', questions_path %>
+</p>
+
