--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -3,26 +3,15 @@
 <% form_for(@request) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :term %><br />
-    <%= f.text_field :term %>
-  </p>
-  <p>
-    <%= f.label :position %><br />
-    <%= f.text_field :position %>
-  </p>
-  <p>
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </p>
-  <p>
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </p>
+  <%= render :partial => 'form', :object => f %>
+
   <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
 
+<p>
 <%= link_to 'Show', @request %> |
 <%= link_to 'Back', requests_path %>
+</p>
+
