--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -1,8 +1,9 @@
 <p>
-  <b>Name:</b>
-  <%=h @authority.name %>
+  <b>Name:</b> <%=h @authority.name %>
 </p>
 
-
+<p>
 <%= link_to 'Edit', edit_authority_path(@authority) %> |
 <%= link_to 'Back', authorities_path %>
+</p>
+
