--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,8 +1,9 @@
 <p>
-  <b>Name:</b>
-  <%=h @schedule.name %>
+  <b>Name:</b> <%=h @schedule.name %>
 </p>
 
-
+<p>
 <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
 <%= link_to 'Back', schedules_path %>
+</p>
+
