--- a/app/views/authorities/new.html.erb
+++ b/app/views/authorities/new.html.erb
@@ -1,13 +1,9 @@
 <h1>New authority</h1>
 
-<% form_for(@authority) do |f| %>
-  <%= f.error_messages %>
+<% semantic_form_for(@authority) do |f| %>
 
   <%= render :partial => 'form', :object => f %>
 
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
 <p>
