--- a/app/views/committees/new.html.erb
+++ b/app/views/committees/new.html.erb
@@ -1,14 +1,10 @@
 <h1>New committee</h1>
 
-<% form_for(@committee) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(@committee) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
+<p>
 <%= link_to 'Back', committees_path %>
+</p>
 
