--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,14 +1,12 @@
 <h1>New schedule</h1>
 
-<% form_for(@schedule) do |f| %>
-  <%= f.error_messages %>
+<% semantic_form_for(@schedule) do |f| %>
 
   <%= render :partial => 'form', :object => f %>
 
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
+<p>
 <%= link_to 'Back', schedules_path %>
+</p>
 
