--- a/app/views/qualifications/index.html.erb
+++ b/app/views/qualifications/index.html.erb
@@ -1,22 +1,22 @@
 <h1>Listing qualifications</h1>
 
 <table>
+  <thead>
   <tr>
     <th>Name</th>
     <th>Description</th>
   </tr>
+  </thead>
 
-<% @qualifications.each do |qualification| %>
-  <tr>
-    <td><%=h qualification.name %></td>
-    <td><%=h qualification.description %></td>
-    <td><%= link_to 'Show', qualification %></td>
-    <td><%= link_to 'Edit', edit_qualification_path(qualification) %></td>
-    <td><%= link_to 'Destroy', qualification, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
+  <tbody>
+  <%= render :partial => 'qualification', :collection => @qualifications %>
+  </tbody>
+
 </table>
 
 <br />
 
+<p>
 <%= link_to 'New qualification', new_qualification_path %>
+</p>
+
