--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,18 +1,18 @@
 <p>
-  <b>Name:</b>
-  <%=h @question.name %>
+  <b>Name:</b> <%=h @question.name %>
 </p>
 
 <p>
   <b>Content:</b>
-  <%=h @question.content %>
+</p>
+<%=markdown @question.content %>
+
+<p>
+  <b>Global?</b> <%= @question.global ? 'Yes' : 'No' %>
 </p>
 
 <p>
-  <b>Global:</b>
-  <%=h @question.global %>
-</p>
-
-
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
+</p>
+
