Add basic user create, list, delete, show.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,45 +1,15 @@
-  <p>
-    <%= form.label :first_name %><br />
-    <%= form.text_field :first_name %>
-  </p>
-  <p>
-    <%= form.label :middle_name %><br />
-    <%= form.text_field :middle_name %>
-  </p>
-  <p>
-    <%= form.label :last_name %><br />
-    <%= form.text_field :last_name %>
-  </p>
-  <p>
-    <%= form.label :email %><br />
-    <%= form.text_field :email %>
-  </p>
-  <p>
-    <%= form.label :mobile_phone %><br />
-    <%= form.text_field :mobile_phone %>
-  </p>
-  <p>
-    <%= form.label :work_phone %><br />
-    <%= form.text_field :work_phone %>
-  </p>
-  <p>
-    <%= form.label :home_phone %><br />
-    <%= form.text_field :home_phone %>
-  </p>
-  <p>
-    <%= form.label :work_address %><br />
-    <%= form.text_field :work_address %>
-  </p>
-  <p>
-    <%= form.label :date_of_birth %><br />
-    <%= form.date_select :date_of_birth %>
-  </p>
-  <p>
-    <%= form.label :net_id %><br />
-    <%= form.text_field :net_id %>
-  </p>
-  <p>
-    <%= form.label :status %><br />
-    <%= form.text_field :status %>
-  </p>
+  <%= form.error_messages %>
+  <% form.inputs do %>
+  <%= form.input :first_name %>
+  <%= form.input :middle_name %>
+  <%= form.input :last_name %>
+  <%= form.input :net_id %>
+  <%= form.input :email %>
+  <%= form.input :mobile_phone %>
+  <%= form.input :work_phone %>
+  <%= form.input :home_phone %>
+  <%= form.input :work_address %>
+  <%= form.input :date_of_birth, :as => :ft_calendar_date_select %>
+  <% end %>
+  <%= form.buttons %>
 
