--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,58 +1,49 @@
 <p>
-  <b>First name:</b>
-  <%=h @user.first_name %>
+  <b>First name:</b> <%=h @user.first_name %>
 </p>
 
 <p>
-  <b>Middle name:</b>
-  <%=h @user.middle_name %>
+  <b>Middle name:</b> <%=h @user.middle_name %>
 </p>
 
 <p>
-  <b>Last name:</b>
-  <%=h @user.last_name %>
+  <b>Last name:</b> <%=h @user.last_name %>
 </p>
 
 <p>
-  <b>Email:</b>
-  <%=h @user.email %>
+  <b>Net id:</b> <%=h @user.net_id %>
 </p>
 
 <p>
-  <b>Mobile phone:</b>
-  <%=h @user.mobile_phone %>
+  <b>Email:</b> <%=h @user.email %>
 </p>
 
 <p>
-  <b>Work phone:</b>
-  <%=h @user.work_phone %>
+  <b>Mobile phone:</b> <%=h @user.mobile_phone %>
 </p>
 
 <p>
-  <b>Home phone:</b>
-  <%=h @user.home_phone %>
+  <b>Work phone:</b> <%=h @user.work_phone %>
 </p>
 
 <p>
-  <b>Work address:</b>
-  <%=h @user.work_address %>
+  <b>Home phone:</b> <%=h @user.home_phone %>
 </p>
 
 <p>
-  <b>Date of birth:</b>
-  <%=h @user.date_of_birth %>
+  <b>Work address:</b> <%=h @user.work_address %>
 </p>
 
 <p>
-  <b>Net:</b>
-  <%=h @user.net_id %>
+  <b>Date of birth:</b> <%=h @user.date_of_birth.to_formatted_s :long %>
 </p>
 
 <p>
-  <b>Status:</b>
-  <%=h @user.status %>
+  <b>Status:</b> <%=h @user.status ? @user.status : 'unknown' %>
 </p>
 
-
+<p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</p>
+
