--- a/app/views/periods/edit.html.erb
+++ b/app/views/periods/edit.html.erb
@@ -1,17 +1,11 @@
 <h1>Editing period</h1>
 
-<% form_for(@period) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(@period) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
 <% end %>
 
 <p>
 <%= link_to 'Show', @period %> |
-<%= link_to 'Back', periods_path %>
+<%= link_to 'Back', schedule_periods_path(@period.schedule) %>
 </p>
 
