--- a/app/views/periods/new.html.erb
+++ b/app/views/periods/new.html.erb
@@ -1,16 +1,10 @@
 <h1>New period</h1>
 
-<% form_for(@period) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for( :period, @period, :url => schedule_periods_path(@period.schedule) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
 <p>
-<%= link_to 'Back', periods_path %>
+<%= link_to 'Back', schedule_periods_path(@period.schedule) %>
 </p>
 
