--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -1,38 +1,25 @@
 <p>
-  <b>Authority:</b>
-  <%=h @position.authority %>
+  <b>Name:</b> <%=h @position.name %>
 </p>
 
 <p>
-  <b>Committee:</b>
-  <%=h @position.committee %>
+  <b>Authority:</b> <%=h @position.authority %>
 </p>
 
 <p>
-  <b>Quiz:</b>
-  <%=h @position.quiz %>
+  <b>Quiz:</b> <%=h @position.quiz %>
 </p>
 
 <p>
-  <b>Schedule:</b>
-  <%=h @position.schedule %>
+  <b>Schedule:</b> <%=h @position.schedule %>
 </p>
 
 <p>
-  <b>Slots:</b>
-  <%=h @position.slots %>
+  <b>Slots:</b> <%=h @position.slots %>
 </p>
 
 <p>
-  <b>Voting:</b>
-  <%=h @position.voting %>
-</p>
-
-<p>
-  <b>Name:</b>
-  <%=h @position.name %>
-</p>
-
-
 <%= link_to 'Edit', edit_position_path(@position) %> |
 <%= link_to 'Back', positions_path %>
+</p>
+
