Intial request management implementation with questions and periods incorporated.

--- a/app/views/periods/_period.html.erb
+++ b/app/views/periods/_period.html.erb
@@ -1,9 +1,10 @@
   <tr>
-    <td><%=h period.schedule %></td>
     <td><%=h period.starts_at.to_s :rfc822 %></td>
     <td><%=h period.ends_at.to_s :rfc822 %></td>
+    <% unless read_only %>
     <td><%= link_to 'Show', period %></td>
     <td><%= link_to 'Edit', edit_period_path(period) %></td>
     <td><%= link_to 'Destroy', period, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
   </tr>
 
