--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,17 +1,11 @@
 <h1>Editing request</h1>
 
-<% form_for(@request) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(@request) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
 <% end %>
 
 <p>
 <%= link_to 'Show', @request %> |
-<%= link_to 'Back', requests_path %>
+<%= link_to 'Back', position_requests_path( @request.position ) %>
 </p>
 
