--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,16 +1,10 @@
 <h1>New request</h1>
 
-<% form_for(@request) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(:request, @request, :url => position_requests_path(@request.position) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
 <p>
-<%= link_to 'Back', requests_path %>
+<%= link_to 'Back', position_requests_path( @request.position ) %>
 </p>
 
