--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,19 +1,33 @@
 <p>
-  <b>Position:</b>
-  <%=h @request.position %>
+  <b>Position:</b> <%=h @request.position %>
 </p>
 
 <p>
-  <b>User:</b>
-  <%=h @request.user %>
+  <b>User:</b> <%=h @request.user %>
 </p>
 
 <p>
-  <b>State:</b>
-  <%=h @request.state %>
+  <b>State:</b> <%=h @request.state %>
 </p>
 
+<p>
+  <b>Periods:</b>
+</p>
 
+<%= render :partial => 'periods/periods', :object => @request.periods,
+  :locals => { :read_only => true } %>
+
+<p>
+  <b>Answers:</b>
+</p>
+
+<% @request.answers(:include => [:question]).each do |answer| %>
+<%=markdown answer.question.content %>
+<%=markdown answer.content %>
+<% end %>
+
+<p>
 <%= link_to 'Edit', edit_request_path(@request) %> |
-<%= link_to 'Back', requests_path %>
+<%= link_to 'Back', position_requests_path(@request.position) %>
+</p>
 
