--- a/app/views/memberships/edit.html.erb
+++ b/app/views/memberships/edit.html.erb
@@ -1,17 +1,11 @@
 <h1>Editing membership</h1>
 
-<% form_for(@membership) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(@membership) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
 <% end %>
 
 <p>
 <%= link_to 'Show', @membership %> |
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'Back', position_memberships_path(@membership.position) %>
 </p>
 
