--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,16 +1,10 @@
 <h1>New membership</h1>
 
-<% form_for(@membership) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(:membership, @membership, :url => position_memberships_url(@membership.position) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
 <p>
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'Back', position_memberships_path(@membership.position) %>
 </p>
 
