--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,34 +1,25 @@
 <p>
-  <b>User:</b>
-  <%=h @membership.user %>
+  <b>User:</b> <%=h @membership.user %>
 </p>
 
 <p>
-  <b>Period:</b>
-  <%=h @membership.period %>
+  <b>Period:</b> <%=h @membership.period %>
 </p>
 
 <p>
-  <b>Position:</b>
-  <%=h @membership.position %>
+  <b>Position:</b> <%=h @membership.position %>
 </p>
 
 <p>
-  <b>Request:</b>
-  <%=h @membership.request %>
+  <b>Starts at:</b> <%=h @membership.starts_at.to_s(:rfc822) %>
 </p>
 
 <p>
-  <b>Starts at:</b>
-  <%=h @membership.starts_at %>
+  <b>Ends at:</b> <%=h @membership.ends_at.to_s(:rfc822) %>
 </p>
 
 <p>
-  <b>Ends at:</b>
-  <%=h @membership.ends_at %>
-</p>
-
-
 <%= link_to 'Edit', edit_membership_path(@membership) %> |
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'Back', position_memberships_path(@membership.position) %>
+</p>
 
