--- a/app/views/enrollments/new.html.erb
+++ b/app/views/enrollments/new.html.erb
@@ -1,16 +1,10 @@
 <h1>New enrollment</h1>
 
-<% form_for(@enrollment) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(:enrollment, @enrollment, :url => committee_enrollments_path(@enrollment.committee) ) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
 <p>
-<%= link_to 'Back', enrollments_path %>
+<%= link_to 'Back', committee_enrollments_path(@enrollment.committee) %>
 </p>
 
