Add and test edit/show functionality for authority messages.

--- a/app/views/authorities/_form.html.erb
+++ b/app/views/authorities/_form.html.erb
@@ -1,6 +1,8 @@
   <%= form.error_messages %>
   <% form.inputs do %>
   <%= form.input :name %>
+  <%= form.input :join_message %>
+  <%= form.input :leave_message %>
   <% end %>
   <%= form.buttons %>
 
