--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -5,6 +5,8 @@
   <%= form.input :quiz %>
   <%= form.input :schedule %>
   <%= form.input :slots %>
+  <%= form.input :join_message %>
+  <%= form.input :leave_message %>
   <% end %>
   <%= form.buttons %>
 
