--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -1,8 +1,8 @@
   <%= form.error_messages %>
   <% form.inputs do %>
   <%= form.input :name %>
-  <%= form.text :join_message %>
-  <%= form.text :leave_message %>
+  <%= form.input :join_message %>
+  <%= form.input :leave_message %>
   <% end %>
   <%= form.buttons %>
 
