--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -18,6 +18,15 @@
   <b>Slots:</b> <%=h @position.slots %>
 </p>
 
+<p><b>Join message:</b></p>
+
+<%=markdown @position.join_message %>
+
+<p><b>Leave message:</b></p>
+
+<%=markdown @position.leave_message %>
+
+
 <p>
 <%= link_to 'Edit', edit_position_path(@position) %> |
 <%= link_to 'Back', positions_path %>
