--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Listing quizzes</h1>
 
 <table>
+<thead>
   <tr>
     <th>Name</th>
   </tr>
-
+</thead>
+<tbody>
 <% @quizzes.each do |quiz| %>
   <tr>
     <td><%=h quiz.name %></td>
@@ -13,8 +15,12 @@
     <td><%= link_to 'Destroy', quiz, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
+</tbody>
 </table>
 
 <br />
 
+<p>
 <%= link_to 'New quiz', new_quiz_path %>
+</p>
+
