--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,13 +1,7 @@
 <h1>New quiz</h1>
 
-<% form_for(@quiz) do |f| %>
-  <%= f.error_messages %>
-
+<% semantic_form_for(@quiz) do |f| %>
   <%= render :partial => 'form', :object => f %>
-
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
 <% end %>
 
 <p>
