--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,8 +1,10 @@
 <p>
-  <b>Name:</b>
-  <%=h @quiz.name %>
+  <b>Name:</b> <%=h @quiz.name %>
 </p>
 
 
+<p>
 <%= link_to 'Edit', edit_quiz_path(@quiz) %> |
 <%= link_to 'Back', quizzes_path %>
+</p>
+
