Add authorization controls to users controller.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
 </p>
 
 <p>
-  <b>Date of birth:</b> <%=h @user.date_of_birth.to_formatted_s :long %>
+  <b>Date of birth:</b> <%=h @user.date_of_birth.to_formatted_s( :long ) if @user.date_of_birth %>
 </p>
 
 <p>
