--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,6 +43,10 @@
 </p>
 
 <p>
+  <b>Administrator:</b> <%=h @user.admin? ? 'Yes' : 'No' %>
+</p>
+
+<p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
 </p>
