--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -29,6 +29,8 @@
 
 <p>
 <%= link_to 'Edit', edit_position_path(@position) %> |
+<%= link_to 'List Memberships', position_memberships_path(@position) %> |
+<%= link_to 'List Requests', position_requests_path(@position) %> |
 <%= link_to 'Back', positions_path %>
 </p>
 
