--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -28,6 +28,7 @@
 
 <p>
 <%= link_to 'Edit', edit_request_path(@request) %> |
+<%= link_to 'List Memberships', request_memberships_path(@request) %> |
 <%= link_to 'Back', position_requests_path(@request.position) %>
 </p>
 
