--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -4,6 +4,7 @@
 
 <p>
 <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
+<%= link_to 'List Periods', schedule_periods_path(@schedule) %> |
 <%= link_to 'Back', schedules_path %>
 </p>
 
