--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 <%= link_to 'qualifications', qualifications_path %> |
 <%= link_to 'questions', questions_path %> |
 <%= link_to 'schedules', schedules_path %> |
-<%= link_to 'quizzes', quizzes_path %>
+<%= link_to 'quizzes', quizzes_path %> |
+<%= link_to 'users', users_path %>
 <% end %>
 
 <%= yield %>
