--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,13 @@
 <p style="color: red"><%= flash[:error] %></p>
 <p style="color: green"><%= flash[:notice] %></p>
 
-<% if current_user && current_user.admin? %>
-<%= link_to 'authorities', authorities_path %> |
+<% if current_user %>
+
+<%= link_to 'my profile', profile_path %> |
+<%= link_to 'logout', logout_path %>
+
+<% if current_user.admin? %>
+ | <%= link_to 'authorities', authorities_path %> |
 <%= link_to 'committees', committees_path %> |
 <%= link_to 'positions', positions_path %> |
 <%= link_to 'qualifications', qualifications_path %> |
@@ -23,6 +28,12 @@
 <%= link_to 'schedules', schedules_path %> |
 <%= link_to 'quizzes', quizzes_path %> |
 <%= link_to 'users', users_path %>
+<% end %>
+
+<% else %>
+
+<%= link_to 'login', login_path %>
+
 <% end %>
 
 <%= yield %>
