--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -8,7 +8,7 @@
 </p>
 <% end %>
 
-<% will_paginate @committees %>
+<%= will_paginate @committees %>
 
 <table>
   <thead>
@@ -21,7 +21,7 @@
   </tbody>
 </table>
 
-<% will_paginate @committees %>
+<%= will_paginate @committees %>
 
 <br />
 
