--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -8,7 +8,7 @@
 </p>
 <% end %>
 
-<% will_paginate @positions %>
+<%= will_paginate @positions %>
 
 <table>
   <thead>
@@ -27,7 +27,7 @@
 
 </table>
 
-<% will_paginate @positions %>
+<%= will_paginate @positions %>
 
 <br />
 
