--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 </p>
 <% end %>
 
-<% will_paginate @users %>
+<%= will_paginate @users %>
 
 <table>
   <thead>
@@ -29,7 +29,7 @@
   </tbody>
 </table>
 
-<% will_paginate @users %>
+<%= will_paginate @users %>
 
 <br />
 
