Ability to add user status information.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,7 @@
   <% if current_user.admin? %>
   <%= form.input :net_id %>
   <%= form.input :admin, :as => :radio, :label => 'Administrator?' %>
+  <%= form.input :status, :as => :select, :collection => User::STATUSES %>
   <% end %>
   <% end %>
   <%= form.buttons %>
