--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
 </p>
 
 <p>
-  <b>Status:</b> <%=h @user.status ? @user.status : 'unknown' %>
+  <b>Status:</b> <%=h @user.status.blank? ? 'unknown' : @user.status %>
 </p>
 
 <p>
