--- a/app/views/memberships/edit.html.erb
+++ b/app/views/memberships/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing membership</h1>
+<h1>Editing membership for <%=h @membership.position %></h1>
 
 <% semantic_form_for(@membership) do |f| %>
   <%= render :partial => 'form', :object => f %>
