Add ability to list memberships for a committee.

--- a/app/views/memberships/_membership.html.erb
+++ b/app/views/memberships/_membership.html.erb
@@ -3,6 +3,10 @@
     <td><%=h membership.period %></td>
     <td><%=h membership.starts_at.to_s :rfc822 %></td>
     <td><%=h membership.ends_at.to_s :rfc822 %></td>
+    <% if committee %>
+    <td><%=h membership.enrollments.titles_for_committee committee %></td>
+    <td><%= membership.enrollments.votes_for_committee committee %></td>
+    <% end %>
     <td><%= link_to 'Show', membership %></td>
     <td><%= link_to 'Edit', edit_membership_path(membership) %></td>
     <td><%= link_to 'Destroy', membership, :confirm => 'Are you sure?', :method => :delete %></td>
