--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -13,6 +13,7 @@
 <p>
 <%= link_to 'Edit', edit_committee_path(@committee) %> |
 <%= link_to 'List Enrollments', committee_enrollments_path(@committee) %> |
+<%= link_to 'List Memberships', committee_memberships_path(@committee) %> |
 <%= link_to 'Back', committees_path %>
 </p>
 
